--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "@loxjs/config",
-  "version": "2.1.0",
-  "main": "lib/index.js",
-  "author": "Zen Li",
-  "license": "MIT",
-  "scripts": {
-    "lint": "./node_modules/.bin/eslint src",
-    "build": "./node_modules/.bin/babel src -d lib",
-    "prepublishOnly": "npm run lint && npm run build"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
-    "@babel/preset-env": "7.4.4",
-    "babel-eslint": "10.0.1",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-html": "5.0.3",
-    "eslint-plugin-import": "2.17.2",
-    "husky": "3.0.0",
-    "lodash": "^4.16.0"
-  },
-  "peerDependencies": {
-    "lodash": ">=4.16.0"
-  }
+    "name": "@loxjs/config",
+    "version": "2.1.6",
+    "main": "index.js",
+    "description": "A configuration management library for Node.js applications",
+    "keywords": [
+        "configuration",
+        "config",
+        "settings",
+        "options",
+        "environment",
+        "variables",
+        "dotenv",
+        "json",
+        "yaml",
+        "toml",
+        "ini",
+        "xml",
+        "properties",
+        "hjson",
+        "cson"
+    ],
+    "peerDependencies": {
+        "lodash": ">=4.16.0"
+    },
+    "license": "MIT",
+    "author": "Zen Li",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/loxjs/config"
+    },
+    "homepage": "https://github.com/loxjs/config",
+    "bugs": {
+        "url": "https://github.com/loxjs/config/issues"
+    }
 }
