--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@loxjs/config",
-    "version": "2.1.6",
+    "version": "2.1.7",
     "main": "index.js",
     "description": "A configuration management library for Node.js applications",
     "keywords": [
@@ -29,7 +29,7 @@
         "type": "git",
         "url": "https://github.com/loxjs/config"
     },
-    "homepage": "https://github.com/loxjs/config",
+    "homepage": "https://github.com/loxjs/config#readme",
     "bugs": {
         "url": "https://github.com/loxjs/config/issues"
     }
